# space-doctor

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
examples/broken-llava-space/: README.md  app.py  requirements.txt
src/space_doctor/: __init__.py  analyzers.py  cli.py  doctor.py  models.py  patches.py  reports.py  shell.py  trace.py
tests/: test_analyzers.py  test_trace.py
